# MakePAK

./: .gitignore  AUTHORS  FORMAT  INSTALL-GIT  Makefile.am  NEWS  README  THANKS  autogen.sh  configure.ac
doc/: Makefile.am  makepak.texi  pak.texi
man/: Makefile.am
pkg/: Portfile  README  debian.changelog  debian.control  makepak.dsc  makepak.spec
rpm/: makepak.spec
src/: Makefile.am  pak.c
